--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.6;
+$background-opacity: 0.7;
 
 @mixin easeOut {
     transition: all 0.5s ease-out;
@@ -27,4 +27,41 @@ $background-opacity: 0.6;
             }
         }
     }
+}
+
+//set text color
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+        } @else {
+            @return #fff;
+        }
+
+    
+}
+
+//medida query mixins
+@mixin mediaSm {
+    @media screen and (max-width: 500px){
+        @content;
+    }
+    
+}
+@mixin mediaMd {
+    @media screen and (max-width: 768px){
+        @content;
+    }
+    
+}
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px){
+        @content;
+    }
+    
+}
+@mixin mediaXl {
+    @media screen and (min-width: 1171px){
+        @content;
+    }
+    
 }
