--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,7 +13,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: white;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
 
@@ -96,7 +96,7 @@
             height: 250px;
             background: url('../img/portrait.jpg');
             border-radius: 50%;
-            border: solid 3 px $secondary-color;
+            border: solid 3px $secondary-color;
         }
     }
     
@@ -122,7 +122,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: white;
+        color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut;
 
